--- a/Nostalgia/Base.lproj/Main.storyboard
+++ b/Nostalgia/Base.lproj/Main.storyboard
@@ -193,6 +193,7 @@
                                     <outlet property="bottomLabel" destination="Swr-By-Ols" id="34N-in-0gr"/>
                                     <outlet property="imageView" destination="OoW-ID-8OF" id="Axk-gd-5lN"/>
                                     <outlet property="labelBackgroundView" destination="c2F-Fk-5e2" id="PgP-V0-f41"/>
+                                    <segue destination="W4q-Bg-Ygw" kind="push" identifier="SongDetailVC" id="Nkh-X5-XKB"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -207,32 +208,53 @@
             </objects>
             <point key="canvasLocation" x="2042" y="145"/>
         </scene>
-        <!--PickerVC-->
-        <scene sceneID="RUc-7A-XSr">
+        <!--Song DetailVC-->
+        <scene sceneID="VYJ-0s-74L">
             <objects>
-                <viewController storyboardIdentifier="PickerVC" id="Mx1-94-ict" customClass="PickerVC" sceneMemberID="viewController">
+                <viewController id="W4q-Bg-Ygw" customClass="SongDetailVC" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="HKg-JC-lSo"/>
-                        <viewControllerLayoutGuide type="bottom" id="z9j-fk-9KV"/>
+                        <viewControllerLayoutGuide type="top" id="nAM-bX-vgz"/>
+                        <viewControllerLayoutGuide type="bottom" id="3ph-bo-20S"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="wEL-rn-IYx">
+                    <view key="view" contentMode="scaleToFill" id="bK6-ts-Hih">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EGB-xH-rpB">
-                                <rect key="frame" x="0.0" y="203" width="320" height="162"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            </pickerView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoLight" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1rl-6a-cxH">
+                                <rect key="frame" x="20" y="526" width="22" height="22"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <state key="normal">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="infoButtonPressed:" destination="W4q-Bg-Ygw" eventType="touchUpInside" id="Gz4-M9-v8V"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sjc-42-g3s">
+                                <rect key="frame" x="35" y="159" width="250" height="250"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="250" id="L8b-sc-MCc"/>
+                                    <constraint firstAttribute="width" constant="250" id="gyV-Pc-zCI"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerY" secondItem="Sjc-42-g3s" secondAttribute="centerY" id="bls-87-t55"/>
+                            <constraint firstAttribute="centerX" secondItem="Sjc-42-g3s" secondAttribute="centerX" id="vCd-Cs-vkq"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="VNo-b5-i4v"/>
                     <connections>
-                        <outlet property="picker" destination="EGB-xH-rpB" id="Krq-o0-b76"/>
+                        <outlet property="containerView" destination="Sjc-42-g3s" id="K11-gO-mPk"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="sit-F8-Ah4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Q16-dG-AWI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1103" y="256"/>
+            <point key="canvasLocation" x="2477" y="145"/>
         </scene>
         <!--Date PickerTVC-->
         <scene sceneID="aWZ-LT-ayr">
